# swiftgrid

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  workflow-engine-phase2-architecture.md
apps/web/: drizzle.config.ts  package.json  tsconfig.json  vite.config.ts
apps/web/drizzle/: 0000_safe_randall.sql  0001_glossy_shotgun.sql  0002_node_idempotency.sql  0003_subflow_parent_linking.sql  0005_batch_operations.sql  0006_map_timeout.sql  0007_batch_metadata_cache.sql
apps/web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
apps/web/scripts/: check-batch-results.ts  cleanup-test-workflows.ts  fix-batch-results-pk.ts  load-llm-test-flow.ts  load-map-test.ts  load-subflow-test.ts  load-test-flow.ts  migrate-v1-versions.ts
apps/web/src/: app.css  app.html
apps/web/src/lib/: monaco.ts
apps/web/src/lib/components/: CanvasToolbar.svelte  FlowInit.svelte  ImportModal.svelte  MonacoLazy.svelte  Navbar.svelte  RunDetailView.svelte  RunHistoryPanel.svelte  SchedulePanel.svelte  Sidebar.svelte  ToastStack.svelte  VersionHistoryPanel.svelte  WorkflowActionsMenu.svelte  WorkflowPicker.svelte
apps/web/src/lib/server/: sanitizeGraph.ts  secretsCache.ts
apps/web/src/lib/services/: autoSaveService.svelte.ts  (+3 more)
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/worker/: Cargo.toml
apps/worker/src/: cancellation.rs  events.rs  lib.rs  main.rs  retry.rs  scheduler.rs  streaming.rs  types.rs
apps/worker/src/nodes/: code.rs  delay.rs  http.rs  llm.rs  map.rs  mod.rs  router.rs  subflow.rs  webhook.rs
(+68 files in other folders)
