[package]
name = "swiftgrid-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.32.7", features = ["tokio-comp", "json"] }
reqwest = { version = "0.12.24", features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
typeshare = "1.0.0"
rquickjs = { version = "0.10.0", features = ["full-async"] }
uuid = { version = "1.16", features = ["v4"] }