[package]
name = "swiftgrid-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.32.7", features = ["tokio-comp", "json"] }
reqwest = { version = "0.12.24", features = ["rustls-tls", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
typeshare = "1.0.0"
rquickjs = { version = "0.10.0", features = ["full-async"] }
uuid = { version = "1.16", features = ["v4"] }
futures-util = "0.3"

# Database for event logging
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Better error handling
thiserror = "2.0"

# Backoff for retries
rand = "0.9"

# Cron scheduling
cron = "0.15"
chrono-tz = "0.10"